; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_work_interval.c_wi_retain.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_work_interval.c_wi_retain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_interval = type { i32 }

@memory_order_relaxed = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_interval*)* @wi_retain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wi_retain(%struct.work_interval* %0) #0 {
  %2 = alloca %struct.work_interval*, align 8
  %3 = alloca i64, align 8
  store %struct.work_interval* %0, %struct.work_interval** %2, align 8
  %4 = load %struct.work_interval*, %struct.work_interval** %2, align 8
  %5 = getelementptr inbounds %struct.work_interval, %struct.work_interval* %4, i32 0, i32 0
  %6 = load i32, i32* @memory_order_relaxed, align 4
  %7 = call i64 @atomic_fetch_add_explicit(i32* %5, i32 1, i32 %6)
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = icmp sgt i64 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  ret void
}

declare dso_local i64 @atomic_fetch_add_explicit(i32*, i32, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
